# MADE-2.0-v2-

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: MADE-spec-v2.md
src/: app.ts  config.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecar/: generate.py
src-tauri/src/: lib.rs  main.rs
src/capture/: capture.ts
src/modules/: index.ts
src/modules/form-provider/: chain.ts  generation-provider.ts  retrieval-provider.ts  template-provider.ts
src/modules/generation-backend/: local-sidecar.ts
src/modules/geometry-engine/: bubble-region.ts  mesh-engine.ts  primitives.ts  sculpt-engine.ts
src/modules/gesture-recognizer/: rules.ts
src/modules/hand-tracking/: mediapipe.ts
src/modules/interpreter/: hypothesis-engine.ts
src/modules/renderer/: bubble-viz.ts  influence-blob.ts  nav-sphere.ts  three-renderer.ts
src/modules/satisfaction-signal/: behavioral-signal.ts
src/modules/shape-recognizer/: clip-embedding.ts
src/modules/spatial-mapping/: screen-plane.ts
src/modules/speech/: webspeech.ts
src/modules/store/: local-store.ts
src/types/: intent-graph.ts  modules.ts
