[package]
name = "made-app"
version = "0.0.0"
description = "MADE — Manual Approach in Digital Environment"
authors = ["MADE Contributors"]
license = "MIT"
repository = "https://github.com/werpi279/MADE-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "made_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "made-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
base64         = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
